--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,14 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+#Custom
+.hidden/
+vendor/*
+resources/drivers/
+integration_tests/.hidden
+integration_tests/user_creds.py
+integration_tests/vendor/*
+integration_tests/resources/drivers/
+integration_tests/common/user_creds.py
